<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout
	    android:id="@id/ll_main_navagation"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:gravity="center_vertical"
	    android:background="#ebebeb"
	    android:orientation="horizontal"
	    >
	    
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:background="@drawable/tabbg"
	        android:textSize="@dimen/title_text_size"
	        android:text="@string/title_nav_toutiao"
	        />
	     <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:background="@null"
	        android:textSize="@dimen/title_text_size"
	        android:text="@string/title_nav_baike"
	        />
	     <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:background="@null"
	        android:textSize="@dimen/title_text_size"
	        android:text="@string/title_nav_zixun"
	        />
	     <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:background="@null"
	        android:textSize="@dimen/title_text_size"
	        android:text="@string/title_nav_jingying"
	        />
	     <TextView 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:background="@null"
	        android:textSize="@dimen/title_text_size"
	        android:text="@string/title_nav_shuju"
	        />
	     <TextView 
	         android:layout_width="25dp"
	         android:layout_height="25dp"
	         android:background="@drawable/more"
	         />
	</LinearLayout>
	
	<ImageView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/topline"
	    android:contentDescription="@string/des_imageview"
	     />
	
	<android.support.v4.view.ViewPager
	    android:id="@id/vp_main_content"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="#fff"
	     />
</LinearLayout>
